<resources>
    <string name="app_name">TP1</string>
    <string name="members">Integrantes:</string>
    <string name="txt_member1">Gustavo Joaquin Chazarreta</string>
    <string name="txt_member2">Ezequiel Rickert</string>
    <string name="txt_member3">Santiago Britos</string>
    <string name="title">TP1</string>
    <string name="btnEj1">Ejercicio 1</string>
    <string name="btnEj2">Ejercicio 2</string>
    <string name="txtSuma">Suma</string>
    <string name="tvCalculadora">Calculadora</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnDelete">delete</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnDividir">/</string>
    <string name="btnMultiplicar">×</string>
    <string name="btnIgual">=</string>
    <string name="tvResultado">0</string>
    <string name="suma">Suma</string>
    <string name="primer_numero">Primer Numero :</string>
    <string name="resultado">Resultado</string>
    <string name="calcular">Calcular</string>
    <string name="primernumero">Primer Numero:</string>
</resources>