<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="escribir"
    tools:context=".Ejercicio2">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvCalculadora"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="44dp"
        android:text="@string/tvResultado"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnIgual"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="16dp"
        android:onClick="escribir"
        android:text="@string/btn0"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="16dp"
        android:onClick="escribir"
        android:text="@string/btnDividir"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="borrarTodo"
        android:text="@string/btnDelete"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="104dp"
        android:onClick="escribir"
        android:text="@string/btn1"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="196dp"
        android:onClick="escribir"
        android:text="@string/btn4"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="284dp"
        android:onClick="escribir"
        android:text="@string/btn7"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="284dp"
        android:onClick="escribir"
        android:text="@string/btn8"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="284dp"
        android:onClick="escribir"
        android:text="@string/btn9"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="284dp"
        android:onClick="escribir"
        android:text="@string/btnMas"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="196dp"
        android:onClick="escribir"
        android:text="@string/btn5"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="196dp"
        android:onClick="escribir"
        android:text="@string/btn6"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="196dp"
        android:onClick="escribir"
        android:text="@string/btnMenos"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="104dp"
        android:onClick="escribir"
        android:text="@string/btn2"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="104dp"
        android:onClick="escribir"
        android:text="@string/btn3"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="104dp"
        android:onClick="escribir"
        android:text="@string/btnMultiplicar"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>